# mossy

./: .gitignore  CLAUDE.md  IMPLEMENTATION_PLAN.md  LICENSE  README.md  index.html  package.json  vite.config.ts
.claude/: settings.local.json
scripts/: fetch-llama-server.sh
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: chat.rs
src-tauri/src/models/: chat.rs  llm.rs  mod.rs
src-tauri/src/services/: llm.rs  mod.rs  model_download.rs  sidecar.rs
src-tauri/src/state/: mod.rs
src/components/: HubMenu.tsx  MiniPixelArt.tsx  NavTabs.tsx  PanelCard.tsx  Toast.tsx  icons.tsx
src/features/chat/: ChatPanel.tsx  (+2 more)
src/hooks/: useAchievementStore.ts  useAssistantStore.ts  useAuthStore.ts  useFocusStore.ts  useGameStore.ts  useJournalStore.ts  useQuestStore.ts  useSeason.ts  useSettingsStore.ts  useSyncStore.ts  useTauriStore.ts  useTimeOfDay.ts  useWindowResize.ts
src/lib/: audio.ts  season.test.ts  season.ts  seasonTheme.ts  supabase.ts  tauri.ts  time.test.ts  time.ts
src/stores/: achievementStore.test.ts  achievementStore.ts  assistantStore.test.ts  assistantStore.ts  authStore.test.ts  authStore.ts  chatStore.test.ts  chatStore.ts  creatureStore.test.ts  creatureStore.ts  feedStore.ts  focusStore.test.ts  focusStore.ts  gameStore.test.ts  gameStore.ts  journalStore.test.ts  journalStore.ts  leaderboardStore.ts  questStore.test.ts  questStore.ts  settingsStore.ts  syncStore.test.ts  syncStore.ts  uiStore.ts
src/types/: index.ts  supabase.ts
(+112 files in other folders)
